--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
 <style>
   body { font-family: sans-serif; background: #1e1e1e; color: #eee; padding: 20px; }
   h1 { color: #e60012; }
-  input, select { padding: 5px; margin: 5px; background: #333; color: #eee; border: none; }
-  .log { border-bottom: 1px solid #333; padding: 10px; margin-bottom: 5px; border-radius: 5px; }
-  .title { font-weight: bold; }
-  .desc { margin-left: 10px; display: block; }
+  input, select { padding: 6px; margin: 6px; background: #333; color: #eee; border: none; border-radius: 6px; }
+  .log { border-bottom: 1px solid #333; padding: 10px; margin-bottom: 8px; border-radius: 8px; background: #232323; }
+  .title { font-weight: bold; display: inline-block; margin-bottom: 4px; }
+  .desc { display: block; margin: 6px 0; opacity: 0.95; }
+  small { opacity: 0.8; }
 </style>
 </head>
 <body>
@@ -32,22 +33,17 @@
   <div id="logs"></div>
 
   <script>
-    // ------------------------------------------------------------
-    // Dashboard auth token
-    // Abre o dashboard assim:
-    // https://teuapp.railway.app/?token=TEU_DASHBOARD_TOKEN
-    // ------------------------------------------------------------
     const params = new URLSearchParams(window.location.search);
     const token = params.get('token');
 
     if (!token) {
-      document.body.innerHTML = '<h2 style="color:#ffcc00;">Missing token</h2><p>Add <b>?token=YOUR_TOKEN</b> in the URL.</p>';
+      document.body.innerHTML =
+        '<h2 style="color:#ffcc00;">Missing token</h2>' +
+        '<p>Open with <b>?token=YOUR_DASHBOARD_TOKEN</b></p>';
       throw new Error('Missing token');
     }
 
-    const socket = io({
-      auth: { token }
-    });
+    const socket = io({ auth: { token } });
 
     const logsContainer = document.getElementById('logs');
     const searchInput = document.getElementById('searchUser');
@@ -55,26 +51,13 @@
 
     let allLogs = [];
 
-    function renderLogs(logs) {
-      logsContainer.innerHTML = '';
-      logs.slice().reverse().forEach(log => {
-        const div = document.createElement('div');
-        div.classList.add('log');
-
-        const color = getColor(log.title || '');
-        div.style.borderLeft = `5px solid ${color}`;
-
-        const userTag = log.user?.tag || 'N/A';
-        const execTag = log.executor?.tag || 'N/A';
-        const time = log.time ? new Date(log.time).toLocaleString() : '';
-
-        div.innerHTML = `
-          <span class="title">${escapeHtml(log.title || 'Log')}</span> 
-          <span class="desc">${escapeHtml(log.description || '')}</span>
-          <small>👤 User: ${escapeHtml(userTag)} | 🛠 Executor: ${escapeHtml(execTag)} | ⏰ ${escapeHtml(time)}</small>
-        `;
-        logsContainer.appendChild(div);
-      });
+    function escapeHtml(str) {
+      return String(str ?? '')
+        .replaceAll('&', '&amp;')
+        .replaceAll('<', '&lt;')
+        .replaceAll('>', '&gt;')
+        .replaceAll('"', '&quot;')
+        .replaceAll("'", '&#039;');
     }
 
     function getColor(title) {
@@ -87,13 +70,33 @@
       return '#00ff00';
     }
 
+    function renderLogs(logs) {
+      logsContainer.innerHTML = '';
+      logs.slice().reverse().forEach(log => {
+        const div = document.createElement('div');
+        div.classList.add('log');
+        div.style.borderLeft = `5px solid ${getColor(log.title || '')}`;
+
+        const userTag = log.user?.tag || 'N/A';
+        const execTag = log.executor?.tag || 'N/A';
+        const time = log.time ? new Date(log.time).toLocaleString() : '';
+
+        div.innerHTML = `
+          <span class="title">${escapeHtml(log.title || 'Log')}</span>
+          <span class="desc">${escapeHtml(log.description || '')}</span>
+          <small>👤 User: ${escapeHtml(userTag)} | 🛠 Executor: ${escapeHtml(execTag)} | ⏰ ${escapeHtml(time)}</small>
+        `;
+        logsContainer.appendChild(div);
+      });
+    }
+
     function filterLogs() {
       const search = searchInput.value.toLowerCase();
       const type = filterSelect.value.toLowerCase();
 
       const filtered = allLogs.filter(log => {
-        const u = log.user?.tag?.toLowerCase() || '';
-        const e = log.executor?.tag?.toLowerCase() || '';
+        const u = (log.user?.tag || '').toLowerCase();
+        const e = (log.executor?.tag || '').toLowerCase();
         const matchesUser = u.includes(search) || e.includes(search);
 
         const t = (log.title || '').toLowerCase();
@@ -105,25 +108,15 @@
       renderLogs(filtered);
     }
 
-    function escapeHtml(str) {
-      return String(str)
-        .replaceAll('&', '&amp;')
-        .replaceAll('<', '&lt;')
-        .replaceAll('>', '&gt;')
-        .replaceAll('"', '&quot;')
-        .replaceAll("'", '&#039;');
-    }
+    socket.on('connect', () => socket.emit('requestLogs'));
 
-    socket.on('connect', () => {
-      socket.emit('requestLogs');
+    socket.on('connect_error', () => {
+      document.body.innerHTML =
+        '<h2 style="color:#ff6666;">Unauthorized</h2>' +
+        '<p>Invalid token.</p>';
     });
 
-    socket.on('connect_error', (err) => {
-      document.body.innerHTML = '<h2 style="color:#ff6666;">Unauthorized</h2><p>Invalid token.</p>';
-      console.error(err);
-    });
-
-    socket.on('logs', logs => {
+    socket.on('logs', (logs) => {
       allLogs = Array.isArray(logs) ? logs : [];
       filterLogs();
     });
@@ -131,9 +124,7 @@
     searchInput.addEventListener('input', filterLogs);
     filterSelect.addEventListener('change', filterLogs);
 
-    setInterval(() => {
-      socket.emit('requestLogs');
-    }, 5000);
+    setInterval(() => socket.emit('requestLogs'), 5000);
   </script>
 </body>
 </html>
