--- a/public/index.html
+++ b/public/index.html
@@ -1,90 +1,92 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ozark Bot Dashboard</title>
-<script src="/socket.io/socket.io.js"></script>
-<style>
-  body { font-family: sans-serif; background: #1e1e1e; color: #eee; padding: 20px; }
-  h1 { color: #e60012; }
-  input, select { padding: 6px; margin: 6px; background: #333; color: #eee; border: none; border-radius: 6px; }
-  .log { border-bottom: 1px solid #333; padding: 10px; margin-bottom: 8px; border-radius: 8px; background: #232323; }
-  .title { font-weight: bold; display: inline-block; margin-bottom: 4px; }
-  .desc { display: block; margin: 6px 0; opacity: 0.95; }
-  small { opacity: 0.8; }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ozark Bot Dashboard</title>
+
+  <script src="/socket.io/socket.io.js"></script>
+
+  <style>
+    body { font-family: sans-serif; background: #1e1e1e; color: #eee; padding: 20px; }
+    h1 { color: #e60012; margin-bottom: 10px; }
+    .row { display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-bottom: 10px; }
+    input, select, button {
+      padding: 8px; background: #333; color: #eee; border: none; border-radius: 6px;
+    }
+    button { cursor: pointer; }
+    .log { border-bottom: 1px solid #333; padding: 10px; margin-bottom: 8px; border-radius: 8px; background:#232323; }
+    .title { font-weight: bold; }
+    .desc { margin-left: 10px; display: block; margin-top: 4px; white-space: pre-wrap; }
+    small { display:block; margin-top:6px; color:#aaa; }
+    .hint { color:#aaa; font-size: 12px; margin-top: 4px; }
+  </style>
 </head>
 <body>
   <h1>Ozark Bot Dashboard</h1>
 
-  <div>
-    <input type="text" id="searchUser" placeholder="Search by user/executor...">
+  <div class="row">
+    <input type="text" id="searchUser" placeholder="Pesquisar por user/executor..." />
     <select id="filterType">
-      <option value="">All types</option>
+      <option value="">Todos os tipos</option>
       <option value="warn">Warn</option>
       <option value="mute">Mute</option>
       <option value="clear">Clear</option>
       <option value="game news">Game News</option>
       <option value="anti-spam">Anti-Spam</option>
     </select>
+
+    <button id="btnReload">Reload from DB</button>
+    <button id="btnToken">Set Token</button>
+  </div>
+
+  <div class="hint">
+    Se o servidor tiver <b>DASHBOARD_TOKEN</b> definido, precisas de token.
+    O token fica guardado no teu browser (localStorage).
   </div>
 
   <div id="logs"></div>
 
   <script>
-    const params = new URLSearchParams(window.location.search);
-    const token = params.get('token');
-
-    if (!token) {
-      document.body.innerHTML =
-        '<h2 style="color:#ffcc00;">Missing token</h2>' +
-        '<p>Open with <b>?token=YOUR_DASHBOARD_TOKEN</b></p>';
-      throw new Error('Missing token');
-    }
-
-    const socket = io({ auth: { token } });
-
     const logsContainer = document.getElementById('logs');
     const searchInput = document.getElementById('searchUser');
     const filterSelect = document.getElementById('filterType');
+    const btnReload = document.getElementById('btnReload');
+    const btnToken = document.getElementById('btnToken');
 
     let allLogs = [];
 
-    function escapeHtml(str) {
-      return String(str ?? '')
-        .replaceAll('&', '&amp;')
-        .replaceAll('<', '&lt;')
-        .replaceAll('>', '&gt;')
-        .replaceAll('"', '&quot;')
-        .replaceAll("'", '&#039;');
-    }
-
     function getColor(title) {
-      title = String(title).toLowerCase();
+      title = (title || '').toLowerCase();
       if (title.includes('warn')) return '#ffcc00';
       if (title.includes('mute')) return '#ff6600';
       if (title.includes('clear') || title.includes('purge')) return '#00ccff';
       if (title.includes('game news')) return '#e60012';
-      if (title.includes('anti-spam')) return '#cc00ff';
+      if (title.includes('anti-spam')) return '#b84dff';
       return '#00ff00';
     }
 
     function renderLogs(logs) {
       logsContainer.innerHTML = '';
+
       logs.slice().reverse().forEach(log => {
         const div = document.createElement('div');
         div.classList.add('log');
-        div.style.borderLeft = `5px solid ${getColor(log.title || '')}`;
 
-        const userTag = log.user?.tag || 'N/A';
-        const execTag = log.executor?.tag || 'N/A';
-        const time = log.time ? new Date(log.time).toLocaleString() : '';
+        const color = getColor(log.title);
+        div.style.borderLeft = `5px solid ${color}`;
+
+        const userTag = log.user?.tag || log.user || 'N/A';
+        const execTag = log.executor?.tag || log.executor || 'N/A';
 
         div.innerHTML = `
-          <span class="title">${escapeHtml(log.title || 'Log')}</span>
-          <span class="desc">${escapeHtml(log.description || '')}</span>
-          <small>👤 User: ${escapeHtml(userTag)} | 🛠 Executor: ${escapeHtml(execTag)} | ⏰ ${escapeHtml(time)}</small>
+          <span class="title">${log.title || 'Log'}</span>
+          <span class="desc">${log.description || ''}</span>
+          <small>
+            👤 User: ${userTag}
+            | 🛠 Executor: ${execTag}
+            | ⏰ ${new Date(log.time || log.timestamp || Date.now()).toLocaleString()}
+          </small>
         `;
         logsContainer.appendChild(div);
       });
@@ -95,11 +97,11 @@
       const type = filterSelect.value.toLowerCase();
 
       const filtered = allLogs.filter(log => {
-        const u = (log.user?.tag || '').toLowerCase();
-        const e = (log.executor?.tag || '').toLowerCase();
-        const matchesUser = u.includes(search) || e.includes(search);
-
+        const u = (log.user?.tag || log.user || '').toLowerCase();
+        const e = (log.executor?.tag || log.executor || '').toLowerCase();
         const t = (log.title || '').toLowerCase();
+
+        const matchesUser = u.includes(search) || e.includes(search);
         const matchesType = type ? t.includes(type) : true;
 
         return matchesUser && matchesType;
@@ -108,23 +110,89 @@
       renderLogs(filtered);
     }
 
-    socket.on('connect', () => socket.emit('requestLogs'));
+    function getToken() {
+      return localStorage.getItem('DASHBOARD_TOKEN') || '';
+    }
 
-    socket.on('connect_error', () => {
-      document.body.innerHTML =
-        '<h2 style="color:#ff6666;">Unauthorized</h2>' +
-        '<p>Invalid token.</p>';
+    function setTokenPrompt() {
+      const t = prompt('Enter DASHBOARD_TOKEN:');
+      if (t && t.trim()) {
+        localStorage.setItem('DASHBOARD_TOKEN', t.trim());
+        alert('Token saved! Reloading...');
+        location.reload();
+      }
+    }
+
+    btnToken.addEventListener('click', setTokenPrompt);
+
+    async function loadLogsFromDB() {
+      const token = getToken();
+
+      const headers = {};
+      if (token) {
+        headers['x-dashboard-token'] = token;
+      }
+
+      const url = `/api/logs?page=1&limit=200`;
+      const res = await fetch(url, { headers });
+
+      if (res.status === 401) {
+        alert('Unauthorized. Set DASHBOARD_TOKEN.');
+        return;
+      }
+
+      const json = await res.json();
+      if (!json.ok) {
+        alert('Failed to load logs from DB.');
+        return;
+      }
+
+      allLogs = (json.items || []).map(x => ({
+        title: x.title,
+        user: x.user,
+        executor: x.executor,
+        description: x.description,
+        guild: x.guild,
+        time: x.time || x.createdAt || new Date().toISOString()
+      }));
+
+      filterLogs();
+    }
+
+    btnReload.addEventListener('click', loadLogsFromDB);
+
+    // 1) Carregar histórico do Mongo ao abrir
+    loadLogsFromDB().catch(err => {
+      console.error('DB load error:', err);
+    });
+
+    // 2) Socket.IO (tempo real)
+    const token = getToken();
+    const socket = io({
+      auth: token ? { token } : {}
+    });
+
+    socket.on('connect_error', (err) => {
+      console.error('Socket connect error:', err.message);
+      // Se token for obrigatório, isto pode dar "Unauthorized"
     });
 
     socket.on('logs', (logs) => {
+      // Isto é cache em memória (live)
+      // Junta com o que já tens, mas sem duplicar muito:
+      // por simplicidade: substitui allLogs pelo live cache
       allLogs = Array.isArray(logs) ? logs : [];
       filterLogs();
     });
 
+    // Filtragem em tempo real
     searchInput.addEventListener('input', filterLogs);
     filterSelect.addEventListener('change', filterLogs);
 
-    setInterval(() => socket.emit('requestLogs'), 5000);
+    // Atualização “pull” opcional
+    setInterval(() => {
+      socket.emit('requestLogs');
+    }, 5000);
   </script>
 </body>
 </html>
