--- a/public/index.html
+++ b/public/index.html
@@ -133,9 +133,14 @@
             <button id="btnAddGameNewsFeed" class="btn primary" type="button" data-i18n="gamenews_add_feed">
               Adicionar feed
             </button>
-            <button id="btnSaveGameNewsFeeds" class="btn" type="button" data-i18n="gamenews_save_feeds">
-              Guardar alterações
-            </button>
+          </div>
+          <div class="row gap" style="margin-bottom:8px;">
+            <input
+              id="gamenewsSearch"
+              class="input"
+              data-i18n-placeholder="gamenews_search_placeholder"
+              placeholder="Procurar por nome ou URL do feed"
+            >
           </div>
 
           <div class="user-layout gamenews-layout">
