--- a/public/index.html
+++ b/public/index.html
@@ -288,12 +288,12 @@
   <div class="modal-card">
     <h3 id="modActionTitle">Moderation</h3>
     <div class="modal-body">
-      <label id="modActionReasonLabel">Reason</label>
-      <input id="modActionReason" type="text" placeholder="" />
+      <label for="modActionReason">Reason</label>
+<input id="modActionReason" type="text" placeholder="" />
 
       <div id="modActionDurationWrap" class="hidden">
-        <label id="modActionDurationLabel">Duration</label>
-        <input id="modActionDuration" type="text" placeholder="10m, 1h, 1d" />
+        <label for="modActionDuration">Duration</label>
+<input id="modActionDuration" type="text" placeholder="10m, 1h, 1d" />
       </div>
     </div>
     <div class="modal-actions">
