--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,8 @@
             Estado dos feeds de notícias, últimos envios e potenciais falhas na publicação.
           </p>
 
+          <h3>Estado dos feeds</h3>
+
           <!-- Lista de status (read-only, vindo do sistema de GameNews) -->
           <div class="list" id="gamenewsStatusList">
             <div class="empty" data-i18n="gamenews_empty">
