--- a/public/index.html
+++ b/public/index.html
@@ -133,21 +133,8 @@
       <!-- Lado esquerdo: lista + ações gerais -->
       <div>
         <div class="row gap" style="margin-bottom: 8px;">
-          <button
-            id="btnAddGameNewsFeed"
-            class="btn primary"
-            type="button"
-            data-i18n="gamenews_add_feed"
-          >
+          <button id="btnAddGameNewsFeed" class="btn primary" type="button" data-i18n="gamenews_add_feed">
             Adicionar feed
-          </button>
-          <button
-            id="btnSaveGameNewsFeeds"
-            class="btn"
-            type="button"
-            data-i18n="gamenews_save_feeds"
-          >
-            Guardar alterações
           </button>
         </div>
 
