--- a/public/index.html
+++ b/public/index.html
@@ -128,13 +128,14 @@
     <p class="hint" data-i18n="gamenews_hint">
       Estado dos feeds de notícias e últimas publicações.
     </p>
+    <p class="hint gamenews-count" id="gamenewsFeedCount"></p>
 
     <div class="user-layout gamenews-layout">
       <!-- Lado esquerdo: lista + ações gerais -->
       <div>
         <div class="row gap" style="margin-bottom: 8px;">
-          <button id="btnAddGameNewsFeed" class="btn primary" type="button" data-i18n="gamenews_add_feed">
-            Adicionar feed
+          <button id="btnAddGameNewsFeed" class="btn xs" type="button" data-i18n="gamenews_add_feed">
+            Adicionar
           </button>
         </div>
 
