--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@
       </div>
 
       <!-- Lado direito: painel de detalhe (como userDetailPanel) -->
-      <div class="user-detail gamenews-detail" id="gamenewsFeedDetailPanel">
+      <div class="user-detail gamenews-detail mini-panel" id="gamenewsFeedDetailPanel">
         <div class="empty" data-i18n="gamenews_detail_empty">
           Selecione um feed para ver os detalhes e editar a configuração.
         </div>
@@ -207,7 +207,7 @@
                       </div>
                     </div>
 
-                    <div class="user-detail" id="tempVoiceDetailPanel">
+                    <div class="user-detail mini-panel" id="tempVoiceDetailPanel">
                       <div class="empty" id="tempVoiceDetailEmpty" data-i18n="tempvoice_detail_empty">
                         Selecione um canal base para editar as configurações.
                       </div>
@@ -286,7 +286,7 @@
                 Selecione um servidor para ver utilizadores.
               </div>
             </div>
-            <div class="user-detail" id="userDetailPanel">
+            <div class="user-detail mini-panel" id="userDetailPanel">
               <div class="empty" data-i18n="users_detail_empty">
                 Selecione um utilizador para ver o histórico de moderação e tickets.
               </div>
