--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,52 @@
             <button class="btn" id="btnReloadLogs" data-i18n="logs_reload">Recarregar</button>
           </div>
           
-          <div class="user-layout" id="moderationOverviewLayout">
+          
+          <div class="user-layout moderation-panels">
+            <div class="user-detail mini-panel" id="modServerInsightsPanel">
+              <h3 data-i18n="logs_server_insights_title">Análises do servidor (últimas 24h)</h3>
+              <p class="hint" data-i18n="logs_server_insights_hint">
+                Resumo rápido das ações de moderação nas últimas 24 horas.
+              </p>
+              <div id="modServerInsightsContent">
+                <div class="empty" data-i18n="logs_server_insights_empty">
+                  Ainda não existem dados de moderação no período selecionado.
+                </div>
+              </div>
+            </div>
+
+            <div class="user-detail mini-panel" id="modTicketsPanel">
+              <h3 data-i18n="logs_tickets_panel_title">Últimos tickets (24h)</h3>
+              <p class="hint" data-i18n="logs_tickets_panel_hint">
+                Lista resumida dos tickets criados nas últimas 24 horas.
+              </p>
+              <ul class="simple-list" id="modTicketsList">
+                <li class="empty" data-i18n="logs_tickets_panel_empty">
+                  Não existem tickets nas últimas 24 horas.
+                </li>
+              </ul>
+            </div>
+
+            <div class="user-detail mini-panel" id="modTopOnlinePanel">
+              <h3 data-i18n="logs_top_online_title">Utilizadores mais tempo online</h3>
+              <p class="hint" data-i18n="logs_top_online_hint">
+                Vista rápida dos utilizadores mais presentes no servidor (24h / 7d / 30d / 1 ano).
+              </p>
+              <div class="chips" id="modTopOnlineRange">
+                <button class="chip chip-active" data-range="24h">24h</button>
+                <button class="chip" data-range="7d">7d</button>
+                <button class="chip" data-range="30d">30d</button>
+                <button class="chip" data-range="1y">1 ano</button>
+              </div>
+              <ul class="simple-list" id="modTopOnlineList">
+                <li class="empty" data-i18n="logs_top_online_soon">
+                  Em breve: painel alimentado por dados reais de presença.
+                </li>
+              </ul>
+            </div>
+          </div>
+
+<div class="user-layout" id="moderationOverviewLayout">
             <div class="user-detail mini-panel" id="modServerInsightsPanel">
               <h3 data-i18n="logs_server_insights_title">Análises do servidor (últimas 24h)</h3>
               <p class="hint" data-i18n="logs_server_insights_hint">
